# pyopentui

./: .gitignore  README.md  minimal.py  pyproject.toml  showcase.py  showcase_output.txt  showcase_preview.py
examples/: curses_demo.py  interactive_demo.py  showcase.py
src/pyopentui/: __init__.py  ansi.py  buffer.py  renderable.py  renderables.py  renderer.py  terminal.py  theme.py  types.py
tests/: __init__.py  test_ansi.py  test_buffer.py  test_renderable.py  test_renderables.py  test_renderer.py  test_types.py
